--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@
 title: Learn Make Teach Share
 email: stephen.bannasch@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Learn Make Teach Share is a practice and an ethic that can help make the world kinder and more interesting.
+  Be curious and kind whenever possible.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://learmaketeachshare.org" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ""
 github_username:  stepheneb
 
