--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,12 @@ github_username:  stepheneb
 
 # Build settings
 markdown: kramdown
+kramdown:
+  parse_block_html: true
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-toc
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
