--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username:  stepheneb
+linkedin_username: stephen-bannasch-b34b3643
 
 # Build settings
 markdown: kramdown
