--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Learn Make Teach Share
+author: Stephen Bannasch
 email: stephen.bannasch@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Be curious and kind whenever possible.
@@ -30,6 +31,7 @@ kramdown:
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-gravatar
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
