--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Learn Make Teach Share
+header: images/stephen-smiling-with-guitar-and-ella-cropped-small.jpg
 author: Stephen Bannasch
 email: stephen.bannasch@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
@@ -31,7 +32,6 @@ kramdown:
 theme: minima
 plugins:
   - jekyll-feed
-  - jekyll-gravatar
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
