--- a/_config.yml
+++ b/_config.yml
@@ -49,9 +49,9 @@ markdown: kramdown
 kramdown:
   parse_block_html: true
 
-# plugins:
-#   - jekyll-feed
-#   - jekyll-seo-tag
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
   # - jekyll-remote-theme
 
 # set up remote_theme
