footer: links to resume, art-and-logic

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 author:
   name: Stephen Bannasch
   email: stephen.bannasch@gmail.com
+  resume: https://stepheneb.github.io/resume.html
+  consulting: https://stepheneb.github.io/artandlogic.html
 
 description: > # this means to ignore newlines until "show_excerpts:"
   Learn something new.
