--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   email: stephen.bannasch@gmail.com
   home: https://github.com/stepheneb
   resume: stepheneb.github.io/resume.html
-  consulting: stepheneb.github.io/artandlogic.html
+  consulting: stepheneb.github.io/imaginationandlogic.html
 
 description: > # this means to ignore newlines until "show_excerpts:"
   Learn something new.
